--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="../">HOME</a>
         <a href="./galery.html">GALLERY</a>
         <a href="./document.pdf">NILAI</a>
+        <a href="./portofolio">Portofolio</a>
     </nav>
     <img src="ramdan.jpg" alt="Ramdan Olii">
     <h1>Ramdan Olii</h1>
