--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
       <h2>Sertifikat</h2>
       <div class="grid">
         <article class="card">
-          <h3>Karya 1</h3>
+          <h3>IMPHNEN</h3>
           <img src="sertifikat/sertifikat1.png" alt="Keanggotaan IMPHNEN (Ingin Menjadi Programmer Handal Namun Enggan Ngoding)" />
         </article>
         <article class="card">
-          <h3>Karya 2</h3>
+          <h3>RUCKUS</h3>
           <img src="sertifikat/sertifikat2.png" alt="RUCKUS ICX Implementer Accreditation (RICXI)" />
         </article>
         <article class="card">
-          <h3>Karya 3</h3>
+          <h3>SOON</h3>
           <img src="sertifikat/sertifikat3.jpg" alt="Belum Ada" />
         </article>
       </div>
