--- a/contributor.html
+++ b/contributor.html
@@ -105,7 +105,7 @@
   <section class="contributors">
     <!-- Kontributor 1 -->
     <div class="card">
-      <img src="assets/orangtua.jpg" alt="Orang Tua">
+      <img src="assets/orangtua.png" alt="Orang Tua">
       <h3>Orang Tua.</h3>
       <p>Dua orang terbaik yang selalu berusaha yang terbaik.</p>
       <div class="social-btns">
@@ -118,8 +118,10 @@
       <h3>Ramdan Olii.</h3>
       <p>Developer utama dari semua project yang dibuat atas nama alycia-dev.</p>
       <div class="social-btns">
+        <a href="https://github.com/ramdanolii14" target="_blank">GitHub</a>
         <a href="https://instagram.com/alyciaperucia" target="_blank">Instagram</a>
         <a href="https://facebook.com/nyanta.py" target="_blank">Facebook</a>
+        <a href="https://www.youtube.com/@Nyanta17" target="_blank">Youtube</a>
       </div>
     </div>
 
@@ -127,7 +129,7 @@
     <div class="card">
       <img src="assets/israwaty.jpg" alt="Icha">
       <h3>Israwaty Husain.</h3>
-      <p>-</p>
+      <p>calon istri dari developer utama sekaligus support sistem dari pendiri web tersebut.</p>
       <div class="social-btns">
         <a href="https://tiktok.com/@claisaaa" target="_blank">TikTok</a>
         <a href="https://instagram.com/ichahusain_" target="_blank">Instagram</a>
