--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main class="content">
     <section class="life">
       <h2>Perjalanan Hidup</h2>
-      <p>Saya sedang menempuh studi di bidang Pendidikan Teknologi Informasi, membangun proyek web, dan terus mengembangkan kemampuan saya di dunia digital, sambil menjaga kewarasan.</p>
+      <p>Saya sedang menempuh studi di bidang Pendidikan Teknologi Informasi, membangun proyek web, dan terus mengembangkan kemampuan saya di dunia digital, sambil menjaga agar tetap waras.</p>
     </section>
 
     <section class="future">
