--- a/project.html
+++ b/project.html
@@ -112,7 +112,7 @@
 
     <div class="project-card">
       <h3>Minecraft Server Project</h3>
-      <p>Membangun server Minecraft survival-mod dan roleplay Indonesia. Fokus pada stabilitas, anti-cheat, dan komunitas yang sehat.</p>
+      <p>Membuat Server Minecraft (semua game multiplayer bisa) menggunakan petrodactyl.</p>
       <a href="https://rais2gather.fun/status.php" target="_blank">Maintenance</a>
     </div>
   </main>
