--- a/contributor.html
+++ b/contributor.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contributor | alycia-dev</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/favicon.jpg" type="image/x-icon">
   <style>
     body {
       background: url('assets/ayaka-snow-bg.jpg') center/cover no-repeat fixed;
@@ -80,7 +81,7 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background: rgba(255,255,255,0.1);
+      background: #000000;
       font-size: 0.9rem;
     }
   </style>
