--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ramdan | alycia-dev</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/favicon.jpg" type="image/x-icon">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -21,8 +22,9 @@
 </nav>
   <header class="hero">
     <div class="overlay">
+      <img src="assets/ramdan.jpg" alt="Ramdan" width="200px" height="200px">
       <h1>Ramdan | alycia-dev</h1>
-      <p>"If anyone can do it, why should i?"</p>
+      <p>"A little developer you can trust!"</p>
     </div>
   </header>
 
