--- a/project.html
+++ b/project.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Proyek Saya | Ayaka Portfolio</title>
+  <title>My Project | Ramdan</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/favicon.jpg" type="image/x-icon">
   <style>
     body {
       background: url('assets/ayaka-snow-bg.jpg') center/cover no-repeat fixed;
@@ -75,7 +76,7 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background-color: rgba(255,255,255,0.5);
+      background-color: #000000;
       margin-top: 2rem;
     }
   </style>
