--- a/social-media.html
+++ b/social-media.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sosial Media | Ramdan</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="assets/favicon.jpg" type="image/x-icon">
   <script defer src="script.js"></script>
   <style>
     .card {
