--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="keywords" content="">
 
   <link href="assets/img/favicon.png" rel="icon">
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+  <meta name ="description" content ="An Anarchy Minecraft Website Server.">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <link href="https://fonts.googleapis.com" rel="preconnect">
