--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>"Team" apaan? orang gw disini sendiri.</p>
+        <p>"Team" apaan? orang gw sendiri.</p>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -473,7 +473,7 @@
                   <p>Pria Sigma</p>
                   <div class="team-social">
                     <a href="https://www.facebook.com/nyanta.py/"><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/alyciaperucia/"><i class="bi bi-instagram"></i></a>
                   </div>
                 </div>
               </div>
@@ -492,7 +492,7 @@
                   <p>Pria Sigma</p>
                   <div class="team-social">
                     <a href="https://www.facebook.com/nyanta.py/"><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/alyciaperucia/"><i class="bi bi-instagram"></i></a>
                   </div>
                 </div>
               </div>
@@ -511,7 +511,7 @@
                   <p>Pria Sigma</p>
                   <div class="team-social">
                     <a href="https://www.facebook.com/nyanta.py/"><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/alyciaperucia/"><i class="bi bi-instagram"></i></a>
                   </div>
                 </div>
               </div>
@@ -562,7 +562,7 @@
           </div>
           <div class="social-links d-flex mt-4">
             <a href="https://www.facebook.com/nyanta.py"><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/alyciaperucia/"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
