--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#">Download Map</a>
+      <a class="btn-getstarted" href="#about">Download Map</a>
 
     </div>
   </header>
@@ -380,8 +380,8 @@
                 <i class="bi bi-question-circle"></i>
               </div>
               <div class="card-content">
-                <h3>Still Have Questions?</h3>
-                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Vestibulum ac diam sit amet quam vehicula elementum.</p>
+                <h3>Masih punya pertanyaan?</h3>
+                <p>Kalian dapat menghubungi kontak dibawah ini dengan persentase dijawab kurang dari 5%. Know your limit! how dare you talk to me!</p>
                 <div class="contact-options">
                   <a href="mailto:ramdan.personal@gmail.com" class="contact-option">
                     <i class="bi bi-envelope"></i>
