--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Mahiru Project</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name ="description" content ="An Anarchy Minecraft Website Server.">
+  <meta name="keywords" content="mahiru project">
 
   <link href="assets/img/favicon.png" rel="icon">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-  <meta name ="description" content ="An Anarchy Minecraft Website Server.">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <link href="https://fonts.googleapis.com" rel="preconnect">
