--- a/download/index.html
+++ b/download/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Map Download | Mahiru Project</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-<ul>
-  <li><a href="world.tar.gz">Direct Download</a></li>
-  <li><a href="folder1/">Google Drive</a></li>
-  <li><a href="file2.txt">GoFile</a></li>
-</ul>
+    <meta charset="UTF-8">
+    <title>Download | Mahiru Project</title>
+</head>
+<body>
+    <h1>Semua File Sama hanya beda hosting saja</h1>
+    <ul>
+        <li><a href="files/world.tar.gz" download>Direct Hosting</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1oaLFgMuWpTFp9EtfHSpdRAfDxLHhpgWV?usp=sharing">Google Drive</a></li>
+        <li><a href="https://gofile.io/d/e4ad6f00-bf25-4ec9-8a0d-296dfdbd61d7">GoFile</a></li>
+    </ul>
+</body>
+</html>
