--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
               <li> <span>Mahiru Survival memiliki map yang tidak terlalu besar ukurannya mengingat usia server hanya 8 Bulan. Kamu bisa mendownload Map server ini dengan tombol dibawah.</span></li>
             </ul>
             <a href="https://minecraft-mp.com/server-s345397" class="read-more"><span>Minecraft-MP</span></a>
-            <a href="https://drive.google.com/drive/folders/1oaLFgMuWpTFp9EtfHSpdRAfDxLHhpgWV?usp=sharing" class="read-more"><span>Server 1 Download</span></a>
-            <a href="https://drive.google.com/drive/folders/1oaLFgMuWpTFp9EtfHSpdRAfDxLHhpgWV?usp=sharing" class="read-more"><span>Server 2 Download</span></a>
+            <a href="./download" class="read-more"><span>Download Map</span></a>
           </div>
 
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
