--- a/download/index.html
+++ b/download/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="files/world.tar.gz" download>Direct Hosting</a></li>
         <li><a href="https://drive.google.com/drive/folders/1oaLFgMuWpTFp9EtfHSpdRAfDxLHhpgWV?usp=sharing">Google Drive</a></li>
-        <li><a href="https://gofile.io/d/e4ad6f00-bf25-4ec9-8a0d-296dfdbd61d7">GoFile</a></li>
+        <li><a href="https://gofile.io/d/ud7X0I">GoFile</a></li>
     </ul>
 </body>
 </html>
