--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <li><a href="#about" class="active">About</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Team</a></li>
+          <li><a href="https://blog.ramdan.fun/">Blog</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
