--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay" />
   <meta name="author" content="Ramdan" />
 
-  <!-- Open Graph Meta Tags -->
+
   <meta property="og:title" content="ramdan.fun – Developer" />
   <meta property="og:description" content="Hey, im ramdan. I coded everything i like." />
   <meta property="og:image" content="https://avatars.githubusercontent.com/u/67955366?v=4" />
   <meta property="og:url" content="https://ramdan.fun" />
   <meta property="og:type" content="portofolio" />
 
-  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
@@ -56,3 +55,5 @@
   </main>
 </body>
 </html>
+
+<!--give credit if you want to grab this site-->
