--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
   <title>ramdan.fun</title>
   <meta name="description" content="Hey, im ramdan. I coded everything i like." />
   <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay" />
