--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay" />
   <meta name="author" content="Ramdan" />
 
-
   <meta property="og:title" content="ramdan.fun – Developer" />
   <meta property="og:description" content="Hey, im ramdan. I coded everything i like." />
   <meta property="og:image" content="https://avatars.githubusercontent.com/u/67955366?v=4" />
@@ -35,8 +34,20 @@
     }
   </style>
 </head>
-<body class="flex items-center justify-center min-h-screen text-white">
-  <main class="glass p-6 w-full max-w-md text-center" itemscope itemtype="http://schema.org/Person">
+<body class="flex flex-col items-center justify-center min-h-screen text-white relative">
+
+  <!-- Navbar -->
+  <nav class="glass w-full max-w-4xl mx-auto px-6 py-3 flex justify-between items-center fixed top-4 left-1/2 transform -translate-x-1/2 z-50">
+    <div class="text-lg font-bold">ramdan.fun</div>
+    <ul class="flex gap-4 text-sm">
+      <li><a href="/" class="hover:underline">Home</a></li>
+      <li><a href="./mahiru-project" class="hover:underline">Mahiru Survival</a></li>
+      <li><a href="./mahiru-coin" class="hover:underline">Mahiru Coin</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="glass p-6 w-full max-w-md text-center mt-24" itemscope itemtype="http://schema.org/Person">
     <img src="./assets/ramdan.webp" alt="Ramdan's Avatar" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-white" itemprop="image" />
     <h1 class="text-2xl font-bold" itemprop="name">ramdan.fun</h1>
     <p class="text-sm mt-2 mb-4 px-2" itemprop="description">
