--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="text-lg font-bold">ramdan.fun</div>
     <ul class="flex gap-4 text-sm">
       <li><a href="./mahiru-project" class="hover:underline">Mahiru Survival</a></li>
-      <li><a href="./mahiru-coin" class="hover:underline">Mahiru Coin</a></li>
+      <li><a href="./chatchat-landing" class="hover:underline">ChatChat</a></li>
     </ul>
   </nav>
 
