--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <nav class="glass w-full max-w-4xl mx-auto px-6 py-3 flex justify-between items-center fixed top-4 left-1/2 transform -translate-x-1/2 z-50">
     <div class="text-lg font-bold">ramdan.fun</div>
     <ul class="flex gap-4 text-sm">
-      <li><a href="./mahiru-project" class="hover:underline">Mahiru Survival</a></li>
+      <li><a href="https://nyantube.ramdan.fun" class="hover:underline">Nyantube</a></li>
       <li><a href="./chatchat-landing" class="hover:underline">ChatChat</a></li>
     </ul>
   </nav>
