--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <meta property="og:title" content="ramdan.fun – Developer" />
   <meta property="og:description" content="Hey, im ramdan. I coded everything i like." />
-  <meta property="og:image" content="https://avatars.githubusercontent.com/u/67955366?v=4" />
+  <meta property="og:image" content="https://media.discordapp.net/attachments/1394637491369148439/1398203031853596712/IMG-20240921-WA0024.jpg?ex=6884818c&is=6883300c&hm=4c3a6cb9743ca65a3feb98271431086791279628e5b3a5f5772d5152217256e2&=&format=webp&width=930&height=930" />
   <meta property="og:url" content="https://ramdan.fun" />
   <meta property="og:type" content="portofolio" />
 
