--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay" />
   <meta name="author" content="Ramdan" />
 
-  <meta property="og:title" content="ramdan.fun – Developer" />
-  <meta property="og:description" content="Hey, im ramdan. I coded everything i like." />
+  <meta property="og:title" content="Ramdan Olii – Developer" />
+  <meta property="og:description" content="Hey, im ramdan. I coded everything i like. I use next.js for almost all of my project." />
   <meta property="og:image" content="https://media.discordapp.net/attachments/1394637491369148439/1398203031853596712/IMG-20240921-WA0024.jpg?ex=6884818c&is=6883300c&hm=4c3a6cb9743ca65a3feb98271431086791279628e5b3a5f5772d5152217256e2&=&format=webp&width=930&height=930" />
   <meta property="og:url" content="https://ramdan.fun" />
   <meta property="og:type" content="portofolio" />
