--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       Hey, im ramdan. I coded everything i like. I'm interested in <strong>cybersecurity</strong>, <strong>machine learning</strong>,  <strong>photography</strong>, and <strong>low-level programming</strong>.
     </p>
     <div class="flex justify-center gap-4">
-      <a href="mailto:ramdan.personal@gmail.com" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-600 px-4 py-2 rounded-lg" rel="noopener noreferrer" target="_blank">
+      <a href="mailto:dev@ramdan.fun" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-600 px-4 py-2 rounded-lg" rel="noopener noreferrer" target="_blank">
         Mail (i won't reply).
       </a>
       <a href="https://wa.me/6285796182078" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-600 px-4 py-2 rounded-lg" rel="noopener noreferrer" target="_blank">
@@ -77,3 +77,4 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4963793&101" alt="" border="0"></a></noscript>
 <!-- Histats.com  END  -->
 <!--give credit if you want to grab this site-->
+
