--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <nav class="glass w-full max-w-4xl mx-auto px-6 py-3 flex justify-between items-center fixed top-4 left-1/2 transform -translate-x-1/2 z-50">
     <div class="text-lg font-bold">ramdan.fun</div>
     <ul class="flex gap-4 text-sm">
-      <li><a href="https://nyantube.ramdan.fun" class="hover:underline">Nyantube</a></li>
+      <li><a href="https://nyanstream.my.id" class="hover:underline">NyanStream</a></li>
       <li><a href="./chatchat-landing" class="hover:underline">ChatChat</a></li>
     </ul>
   </nav>
@@ -77,4 +77,5 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4963793&101" alt="" border="0"></a></noscript>
 <!-- Histats.com  END  -->
 <!--give credit if you want to grab this site-->
+
 
