--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
-  <title>ramdan.fun</title>
+  <title>Ramdan Olii</title>
   <meta name="description" content="Hey, im ramdan. I coded everything i like." />
-  <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay" />
+  <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay, ramdan, ramdanolii, ramdan olii, ramdhan, ramdan olii, icha, israwaty, husain, israwaty husain, israwatyhusain" />
   <meta name="author" content="Ramdan" />
 
   <meta property="og:title" content="Ramdan Olii – Developer" />
@@ -48,7 +48,7 @@
   <!-- Main Content -->
   <main class="glass p-6 w-full max-w-md text-center mt-24" itemscope itemtype="http://schema.org/Person">
     <img src="./assets/ramdan.webp" alt="Ramdan's Avatar" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-white" itemprop="image" />
-    <h1 class="text-2xl font-bold" itemprop="name">ramdan.fun</h1>
+    <h1 class="text-2xl font-bold" itemprop="name">Ramdan Olii</h1>
     <p class="text-sm mt-2 mb-4 px-2" itemprop="description">
       Hey, im ramdan. I coded everything i like. I'm interested in <strong>cybersecurity</strong>, <strong>machine learning</strong>,  <strong>photography</strong>, and <strong>low-level programming</strong>.
     </p>
@@ -63,8 +63,7 @@
   </main>
 </body>
 </html>
-   <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
-<!-- Histats.com  START  (aync)-->
+   <div id="histats_counter"></div>
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4963793,4,604,110,55,00011000']);
 _Hasync.push(['Histats.fasi', '1']);
@@ -75,7 +74,6 @@ hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4963793&101" alt="" border="0"></a></noscript>
-<!-- Histats.com  END  -->
-<!--give credit if you want to grab this site-->
+
 
 
