--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
+  <link rel="canonical" href="https://ramdan.fun/" />
   <title>Ramdan Olii</title>
   <meta name="description" content="Hey, im ramdan. I coded everything i like." />
   <meta name="keywords" content="Minecraft, server, pterodactyl, html, css, javascript, js, rugplay, ramdan, ramdanolii, ramdan olii, ramdhan, ramdan olii, icha, israwaty, husain, israwaty husain, israwatyhusain" />
@@ -74,6 +75,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4963793&101" alt="" border="0"></a></noscript>
+
 
 
 
