--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="text-lg font-bold">ramdan.fun</div>
     <ul class="flex gap-4 text-sm">
       <li><a href="https://nyanstream.my.id" class="hover:underline">NyanStream</a></li>
-      <li><a href="./chatchat-landing" class="hover:underline">ChatChat</a></li>
+      <li><a href="/galery.html" class="hover:underline">Galery</a></li>
     </ul>
   </nav>
 
@@ -75,6 +75,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4963793&101" alt="" border="0"></a></noscript>
+
 
 
 
