--- a/galery.html
+++ b/galery.html
@@ -69,8 +69,8 @@
 
       <!-- Foto 4 -->
       <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('./assets/gallery/photo4.gif')">
-        <img src="./assets/gallery/photo4.gif" alt="Beta Tester" class="w-full h-40 object-cover object-center">
-        <div class="p-3 text-sm text-center">Photo</div>
+        <img src="./assets/gallery/photo4.png" alt="Nyanstream" class="w-full h-40 object-cover object-center">
+        <div class="p-3 text-sm text-center">Nyanstream - My Ambitious Project</div>
       </div>
 
       <!-- Foto 5 -->
@@ -156,3 +156,4 @@
   </script>
 </body>
 </html>
+
