--- a/galery.html
+++ b/galery.html
@@ -68,7 +68,7 @@
       </div>
 
       <!-- Foto 4 -->
-      <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('./assets/gallery/photo4.gif')">
+      <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('./assets/gallery/photo4.png')">
         <img src="./assets/gallery/photo4.png" alt="Nyanstream" class="w-full h-40 object-cover object-center">
         <div class="p-3 text-sm text-center">Nyanstream - My Ambitious Project</div>
       </div>
@@ -156,4 +156,5 @@
   </script>
 </body>
 </html>
+
 
