--- a/galery.html
+++ b/galery.html
@@ -74,9 +74,9 @@
       </div>
 
       <!-- Foto 5 -->
-      <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('./assets/gallery/photo5.jpg')">
-        <img src="./assets/gallery/photo5.jpg" alt="Foto 5" class="w-full h-40 object-cover object-center">
-        <div class="p-3 text-sm text-center">Photo</div>
+      <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('./assets/gallery/video.mp4')">
+        <img src="./assets/gallery/video.mp4" alt="Foto 5" class="w-full h-40 object-cover object-center">
+        <div class="p-3 text-sm text-center">Ultra Short Vlog With Her</div>
       </div>
 
       <!-- Foto 6 -->
@@ -156,5 +156,6 @@
   </script>
 </body>
 </html>
+
 
 
