--- a/galery.html
+++ b/galery.html
@@ -31,7 +31,7 @@
   <!-- Navbar -->
   <nav class="glass p-4 flex justify-between items-center m-4">
     <a href="/index.html" class="font-bold">Home</a>
-    <a href="/galery.html" class="font-bold">🖼Gallery</a>
+    <a href="/galery.html" class="font-bold">Gallery</a>
   </nav>
 
   <!-- Gallery Grid -->
@@ -62,7 +62,7 @@
 
     <!-- Foto 5 (VIDEO) -->
     <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('https://txtcdwwrpusmmbvoimkq.supabase.co/storage/v1/object/public/videos/1756496507830-video.mp4','video')">
-      <img src="./assets/gallery/videoframe.jpg" alt="Vlog" class="w-full h-40 object-cover object-center">
+      <img src="./assets/gallery/videoframe.png" alt="Vlog" class="w-full h-40 object-cover object-center">
       <div class="p-3 text-sm text-center">Ultra Short Vlog With Her</div>
     </div>
 
@@ -164,3 +164,4 @@
   </script>
 </body>
 </html>
+
