--- a/galery.html
+++ b/galery.html
@@ -113,6 +113,7 @@
       
       <!-- Gambar -->
       <img id="previewImage" src="" alt="Preview" class="w-full max-h-[60vh] object-contain rounded mb-4">
+      <video id="previewVideo" controls class="w-full max-h-[60vh] object-contain rounded mb-4 hidden"></video>
       
       <!-- Tombol aksi -->
       <div class="flex justify-center gap-4">
@@ -156,4 +157,5 @@
   </script>
 </body>
 </html>
+
 
