--- a/galery.html
+++ b/galery.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery - Ramdan Olii</title>
-  <meta name="description" content="Kumpulan album Ramdan Olii" />
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
+  <meta name="description" content="My Galery Nothing More. Just My Memories." />
   <link rel="canonical" href="https://ramdan.fun/galery.html" />
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -157,5 +158,6 @@
   </script>
 </body>
 </html>
+
 
 
