--- a/galery.html
+++ b/galery.html
@@ -75,7 +75,7 @@
       </div>
 
       <!-- Foto 5 -->
-      <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('https://txtcdwwrpusmmbvoimkq.supabase.co/storage/v1/object/public/videos/1756496507830-video.mp4')">
+      <div class="glass overflow-hidden cursor-pointer" onclick="openPreview('https://txtcdwwrpusmmbvoimkq.supabase.co/storage/v1/object/public/videos/1756496507830-video.mp4', 'video')">
         <img src="./assets/gallery/videoframe.png" alt="Israwaty Husain Ramdan Olii" class="w-full h-40 object-cover object-center">
         <div class="p-3 text-sm text-center">She's beautiful isn't she?</div>
       </div>
@@ -176,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
