--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div class="text-lg font-bold">ramdan.fun</div>
     <ul class="flex gap-4 text-sm">
       <li><a href="https://nyanstream.my.id" class="hover:underline">NyanStream</a></li>
-      <li><a href="/galery.html" class="hover:underline">Galery</a></li>
+      <li><a href="https://ramdan.fun/chatchat-landing/" class="hover:underline">ChatChat</a></li>
     </ul>
   </nav>
 
   <!-- Main Content -->
   <main class="glass p-6 w-full max-w-md text-center mt-24" itemscope itemtype="http://schema.org/Person">
-    <img src="./assets/ramdan.webp" alt="Ramdan's Avatar" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-white" itemprop="image" />
+    <img src="./assets/ramdan.jpg" alt="Ramdan Olii" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-white" itemprop="image" />
     <h1 class="text-2xl font-bold" itemprop="name">Ramdan Olii</h1>
     <p class="text-sm mt-2 mb-4 px-2" itemprop="description">
       Hey, im ramdan. I coded everything i like. I'm interested in <strong>cybersecurity</strong>, <strong>machine learning</strong>,  <strong>photography</strong>, and <strong>low-level programming</strong>.
@@ -75,6 +75,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4963793&101" alt="" border="0"></a></noscript>
+
 
 
 
